<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/logo"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/complex_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/ComplexCardViewStyle"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/orange_300">

                <TextView
                    style="@style/ComplexTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/complex_1" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/complex_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/ComplexCardViewStyle"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/blue_300">

                <TextView
                    style="@style/ComplexTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complex_2" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/complex_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/ComplexCardViewStyle"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/green_300">

                <TextView
                    style="@style/ComplexTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complex_3" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/complex_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/ComplexCardViewStyle"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/red_300">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complex_4"
                    style="@style/ComplexTextStyle"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/complex_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/ComplexCardViewStyle"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/purple_300">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complex_5"
                    style="@style/ComplexTextStyle"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/recommendations"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/ComplexCardViewStyle"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/amber_300">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendations"
                    style="@style/ComplexTextStyle"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/ComplexCardViewStyle"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/teal_300">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progress"
                    style="@style/ComplexTextStyle"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>